# cmake-simple-library-bootstrap

./: .gitignore  README.md  build.sh  clean.sh
binary/: CMakeLists.txt  build.sh  main.cpp
